<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_definition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/word"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/add_definition_meaning"
        android:layout_width="match_parent"
        android:layout_height="52dip"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/definition"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_definition_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/example"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp" />
</LinearLayout>