<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip">

    <TextView
        android:id="@+id/definition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dip"
        android:layout_marginRight="6dip"
        android:text="@string/definition_name_text"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/definition_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/definition_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="6dip"
        android:layout_marginEnd="6dip"
        android:layout_marginRight="6dip"
        android:textStyle="italic"
        android:text="@string/definition_meaning_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/definition_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/definition_meaning"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dip"
        android:layout_marginEnd="6dip"
        android:layout_marginRight="6dip"
        android:text="@string/definition_example_text"
        android:textSize="14sp" />

</RelativeLayout>